--- a/Projet/Intech.Business/Intech.Business.csproj
+++ b/Projet/Intech.Business/Intech.Business.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Compile Include="FileProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result.cs" />
+    <Compile Include="FileProcessorResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
